Cleanup: * Fixed issues in tests reported by sonarcloud